<https://webkit.org/b/105988> [Mac] Some inspector tests intermittently assert in InspectorOverlay::paint <rdar://problem/12958038>

Reviewed by Joseph Pecoraro.

Update the inspector overlay's layout before painting, if it is stale.

No new tests; fixes an intermittent assertion failure in some existing tests.

* inspector/InspectorOverlay.cpp:
(WebCore::InspectorOverlay::paint):


Canonical link: https://commits.webkit.org/138018@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@154353 268f45cc-cd09-0410-ab3c-d52691b4dbfc