Source/WebCore/inspector/InspectorOverlay.cpp
@@ -209,7 +209,7 @@ void InspectorOverlay::paint(GraphicsContext& context)
         return;
     GraphicsContextStateSaver stateSaver(context);
     FrameView* view = overlayPage()->mainFrame()->view();
-    ASSERT(!view->needsLayout());
+    view->updateLayoutAndStyleIfNeededRecursive();
     view->paint(&context, IntRect(0, 0, view->width(), view->height()));
 }
 
